<resources>
    <string name="app_name">FoodStork</string>
    <string name="phone1">9176687715</string>
    <string name="phone2">9841335951</string>
    <string name="home1"> Christ Faith Home For Children</string>
    <string name="home2">Nethaji Mercy Home</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="bringing_the_joy_of_sharing">Bringing the Joy of Sharing!</string>
    <string name="press_button_to_signup">Press Button to Authenticate!</string>
    <string name="press_button_to_login">Press Button to Login!</string>
    <string name="login">LOGIN</string>
    <string name="confirm_donation">Confirm Donation</string>
    <string name="we_thereby_confirm_that_we_would_like_to_donate_via_foodstork">We thereby confirm that we would like to donate via FoodStork</string>
    <string name="type_email_for_receiving_confirmation">Type Email for receiving confirmation:</string>
    <string name="type_email_id">Type Email-id</string>
    <string name="type_contact_no">Type Contact No:</string>
    <string name="confirm_donation1">CONFIRM DONATION</string>
    <string name="donate">Donate!</string>
    <string name="recieve_donation">Recieve Donation!</string>
    <string name="register_your_details">Register Your Details!</string>
    <string name="name">Name:</string>
    <string name="type_name">Type Name</string>
    <string name="address">Address:</string>
    <string name="postal_address">Postal Address</string>
    <string name="contact_no">Contact No:</string>
    <string name="type_contact_no1">Type Contact No.</string>
    <string name="email_id">Email-id:</string>
    <string name="type_email_id1">Type Email-id</string>
    <string name="submit">SUBMIT</string>
    <string name="register">Register!</string>
    <string name="view_details_of_charity_home">View Details Of Charity Home !</string>
    <string name="register1">Register!</string>
    <string name="send_goodwill_points_to_your_donor">Send Gratitude Greetings To Your Donor!</string>
    <string name="please_contact_the_homes_to_check_if_donation_is_acceptable_at_the_moment">Please contact the homes to check if donation is acceptable at the moment.</string>
    <string name="address1">Address:</string>
    <string name="people_accomodated">People Accomodated:</string>
    <string name="_50">50</string>
</resources>
