<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:text="Welcome to FoodStork!"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#4689C8"
        android:textStyle="bold" />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Hello Charity Home! We at FoodStork are here to bring you joy! If you would like to be a part of the FoodStork family please Register your details and we will add you to our Family within 24-36hrs "

        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#d7184e"
        android:textStyle="bold" />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#4689C8"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/personEditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/type_name"
        android:inputType="textPersonName" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/address"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#4689C8"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/addressView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/postal_address"
        android:inputType="textPostalAddress" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/contact_no"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#4689C8"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/contactView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/type_contact_no1"
        android:inputType="number" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/email_id"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#4689C8"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/type_email_id1"
        android:inputType="textEmailAddress" />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="No.of People Acoomodated:"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#4689C8"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/numpplView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="Type No. Accomodated"
        android:inputType="number" />



    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:background="#6e3a9f"
        android:radius="50dp"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:shape="rectangle"
        android:text="@string/submit"
        android:onClick="sendMessage1"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#ffff"
        android:textStyle="bold" />
</LinearLayout>
    </ScrollView>